infrastructure/argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  annotations:
    cert-manager.io/cluster-issuer: duckdns-letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - argocd.skibidi12.duckdns.org
    secretName: argocd-server-tls
  rules:
  - host: argocd.skibidi12.duckdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 80
